# lattice_boltzmann

./: .gitignore  LICENSE  README.md  example_airfoil.py  example_image_input.png.py  lattice_boltzmann.py  naca_airfoil.py  pyproject.toml  requirements.txt
